fix table of contents overflow

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -245,6 +245,7 @@ article
     table
       width 100%
       border-collapse collapse
+      table-layout fixed
 
     th, td
       text-align left
